@@ -1488,6 +1488,7 @@ BEGIN
     LTEXT           "URL:",IDC_STATIC,15,174,16,8
     EDITTEXT        IDC_URL,71,174,174,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     CONTROL         "<a>Open</a>",IDC_OPENURL,"SysLink",WS_TABSTOP,250,174,26,10
+    PUSHBUTTON      "Disable",IDC_DISABLE,230,211,50,14
 END
 
 IDD_HANDLESTATS DIALOGEX 0, 0, 219, 175
